// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`injects imports 1`] = `
Object {
  "dependencies": Object {
    "pkg-a": "^1.0.0",
    "pkg-b": "^2.0.0",
    "pkg-c": "^3.0.0",
    "provider$pkg-a": "^1.0.0",
    "provider$pkg-b": "^2.0.0",
  },
  "name": "package",
  "version": "2.0.0",
}
`;

exports[`injects imports even when not present in package.json 1`] = `
Object {
  "dependencies": Object {
    "provider$pkg-a": "^1.0.0",
  },
  "name": "package",
  "version": "2.0.0",
}
`;
